# trackdechets-xslx2csv

./: .gitignore  Dockerfile  Pipfile  README.md  README.rst  pyproject.toml
src/: anonymous.py  lint.sh  xlsx2csv.py
src/core/: communes.py  constants.py  helpers.py  models.py  naf.py  utils.py
