[tool.poetry]
name = "td-tools"
version = "0.1.0"
description = ""
authors = ["Laurent Paoletti <lp@providenz.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
rich = "^10.15.2"
click = "^8.0.3"
inquirerpy = "^0.3.1"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


